fix: sharper contrast of unopened tiles.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,7 +74,7 @@
     padding: 0;
 
     &.unopened {
-      background: #fff59d;
+      background: #ef6c00;
 
       &.can-click {
         cursor: pointer;
